--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cors": "^2.8.5",
     "express": "^4.15.2",
     "johnny-five": "^0.10.6",
-    "morse": "^0.1.0"
+    "libxmljs": "^0.19.5",
+    "morse": "^0.1.0",
+    "serialport": "^7.1.4"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " node app.js"
+    "start": " nodemon app.js"
   },
   "author": "",
   "license": "ISC"
